# financial-api

./: .env  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  vercel.json
financial_api/: main.py  services.py
